--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -1,7 +1,10 @@
 * Introduction
+  
   This is a step by step tutorial for new Rails learners to learn how
   Twitter and Bootstrap works and to how to use Twitter Bootstrap to provide
-  your application with modern layout and styling.
+  your application with modern layout and styling. We will build a working
+  Rails application to match the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template from
+  [[http://twitter.github.io/bootstrap/getting-started.html#examples][getting-started.html#examples]].
 
   You can follow the steps below to create a working Rails application.
 
@@ -9,15 +12,17 @@
   you are an Emacs Org Mode user you can carry out the steps in this tutorial
   from the twitter-bootstrap-step-by-step.org file.
   
-* Part One: Build an Rails application with
+* Build an intial Rails application
 
-  The [[http://twitter.github.io/bootstrap/index.html][Twitter Bootstrap project]] on Github provides [[http://twitter.github.io/bootstrap/getting-started.html#examples][8 example layouts]]. In this tutorial we
-  will use the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template.
+  The [[http://twitter.github.io/bootstrap/index.html][Twitter Bootstrap project]] website provides [[http://twitter.github.io/bootstrap/getting-started.html#examples][8 example layouts]]. In this tutorial we
+  will use the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template to see how to use Bootstap's CSS layout.
 
   See [[http://twitter.github.io/bootstrap/][http://twitter.github.io/bootstrap/]] -> [[http://twitter.github.io/bootstrap/getting-started.html#examples][getting-started.html#examples]] to view all 8 examples.
+  See [[https://github.com/twitter/bootstrap][Bootstrap GitHub Repository]] to view the developement repository.
 
-  Let's build our example Rails application with a 'home'
-  controller and 'home/index', "home/about", "home/contact" pages to match the  [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template.
+  Let's build our example Rails application with a 'home' controller
+  and 'home/index', "home/about", "home/contact" pages since those pages
+  are in the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template.
   
   1. [ ] Initialize a new Rails application
      #+BEGIN_SRC sh
@@ -45,7 +50,7 @@
        gem 'therubyracer', platforms: :ruby
      #+END_SRC
      
-     You might open [[file:../Gemfile][Gemfile]] with [[http://macromates.com/][TextMate]] this way:
+     You might open [[file:../Gemfile][Gemfile]] with Emacs, Vi, [[http://macromates.com/][TextMate]], etc. this way:
      #+BEGIN_EXAMPLE
      textmate ../../Gemfile
      #+END_EXAMPLE
@@ -82,4 +87,47 @@
      #+BEGIN_SRC sh
        rails server --port 3000
      #+END_SRC
-* Part Two: Incorporate [[http://twitter.github.io/bootstrap/][Twitter Bootstrap]]'s CSS style sheets and JavaScript scripts.
+* Incorporate [[http://twitter.github.io/bootstrap/][Twitter Bootstrap]]'s CSS style sheets and JavaScript scripts.
+
+  The heart of Twitter Bootstrap is two files: [[https://github.com/twitter/bootstrap/blob/master/docs/assets/css/bootstrap.css][bootstrap.css]] and [[https://github.com/twitter/bootstrap/blob/master/docs/assets/js/bootstrap.js][bootstrap.js]]. We copy
+  the minified forms of those files ( bootstrap.min.css and bootstrap.min.js ) to our
+  Rails application structure and Rails will detect and incorporate them into the application.
+  
+  1. [ ] Download the Zipfile from Twitter Bootstap website from your web browser or web client.
+     #+BEGIN_SRC sh
+       wget http://twitter.github.io/bootstrap/assets/bootstrap.zip
+     #+END_SRC
+  2. [ ] Decompress the bootstrap.zip Zip file
+     #+BEGIN_SRC sh
+       unzip bootstap.zip
+     #+END_SRC
+  3. [ ] Copy bootstrap.min.css to app/assets/stylesheets
+     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
+       cp -v bootstrap/css/bootstrap.css ../app/assets/stylesheets
+     #+END_SRC
+  4. [ ] Copy bootstrap-repsonsive.min.css to app/assets/stylesheets
+     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
+       cp -v bootstrap/css/bootstrap-responsive.css ../app/assets/stylesheets
+     #+END_SRC
+  5. [ ] Copy bootstrap.min.js to app/assets/javascripts
+     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
+       cp -iv bootstrap/js/bootstrap.min.js ../app/assets/javascripts
+     #+END_SRC
+  6. [ ] Copy two image files
+     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
+       # ‘bootstrap/img/glyphicons-halflings.png’
+       # ‘bootstrap/img/glyphicons-halflings-white.png’
+       
+       mkdir -v ../app/assets/images
+       cp -iv bootstrap/img/* ../app/assets/images/
+     #+END_SRC
+     
+  Now that we have [[https://github.com/twitter/bootstrap/blob/master/docs/assets/css/bootstrap.css][bootstrap.css]] and [[https://github.com/twitter/bootstrap/blob/master/docs/assets/js/bootstrap.js][bootstrap.js]] incorporated into our Rails
+  application we can proceed to change the default Rails application layout
+  the use Bootstap's CSS and Javascript.
+  
+* Use a Twitter Bootstap layout in our application instead of the default Rails layout
+  1. [X] backup application.html.erb
+     #+BEGIN_SRC sh
+       cp application.html.erb application.html.erb.rails
+     #+END_SRC
