--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -127,7 +127,101 @@
   the use Bootstap's CSS and Javascript.
   
 * Use a Twitter Bootstap layout in our application instead of the default Rails layout
-  1. [X] backup application.html.erb
+
+  The default Rails application layout has a minimal body structure
+
+  #+BEGIN_SRC html
+    <body>
+    
+    <%= yield %>
+    
+    </body>
+      
+  #+END_SRC
+
+  Well will use the body stucture from Twitter Bootrap's
+  [[http://twitter.github.io/bootstrap/getting-started.html#examples][getting-started.html#examples]] / [[https://github.com/twitter/bootstrap/blob/master/docs/examples/starter-template.html][starter template]] example. The starter example layout may
+  be viewed [[https://github.com/twitter/bootstrap/blob/master/docs/examples/starter-template.html][directly on GitHub]]. The starter example layout uses a fixed width layout, which is
+  introduced at [[http://twitter.github.io/bootstrap/scaffolding.html#layouts][scaffolding.html#layouts]]. 
+
+  #+BEGIN_SRC html
+    <body>
+      
+      <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+          <div class="container">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="brand" href="#">Project name</a>
+            <div class="nav-collapse collapse">
+              <ul class="nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        
+        <h1>Bootstrap starter template</h1>
+        <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+        
+      </div> <!-- /container -->
+      
+    </body>
+  #+END_SRC
+
+  1. [ ] Replace the <body><% = yield %></body> section with the Bootstrap <body> section in file:../app/views/layouts/application.html.erb
+     
+     Here's the end result:
+     
      #+BEGIN_SRC sh
-       cp application.html.erb application.html.erb.rails
+       <html>
+       <head>
+         <title>Bootstrap</title>
+         <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+         <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+         <%= csrf_meta_tags %>
+       </head>
+       
+           <body>
+           
+             <div class="navbar navbar-inverse navbar-fixed-top">
+               <div class="navbar-inner">
+                 <div class="container">
+                   <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                   </button>
+                   <a class="brand" href="#">Project name</a>
+                   <div class="nav-collapse collapse">
+                     <ul class="nav">
+                       <li class="active"><a href="#">Home</a></li>
+                       <li><a href="#about">About</a></li>
+                       <li><a href="#contact">Contact</a></li>
+                     </ul>
+                   </div><!--/.nav-collapse -->
+                 </div>
+               </div>
+             </div>
+             <div class="container">
+               
+               <h1>Bootstrap starter template</h1>
+               <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+               <%= yield %>
+               
+             </div> <!-- /container -->
+             
+           </body>
+       
+       
+       </body>
+       </html>
      #+END_SRC
+  
