--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -33,7 +33,7 @@
        cd bootstrap
      #+END_SRC
   3. [ ] Clone [[https://github.com/troywill/twitter-bootstrap-for-beginners][this tutorial]] from Github.
-     #+BEGIN_SRC sh
+     #+BEGIN_SRC sh :tangle bin/clone-twitter-bootstrap-for-beginners.sh :shebang #!/bin/bash
        git clone https://github.com/troywill/twitter-bootstrap-for-beginners.git
      #+END_SRC
   4. [ ] Examine your Rails installation
@@ -59,7 +59,7 @@
        rake about
      #+END_SRC
   7. [ ] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
-     #+BEGIN_SRC sh
+     #+BEGIN_SRC sh :tangle bin/generate-controller-home.sh :shebang #!/bin/sh
        rails generate controller home index about contact --skip-stylesheets
      #+END_SRC
      
@@ -89,155 +89,110 @@
      #+END_SRC
 
   Now, let's incorporate Bootstrap into our application.
-* [6/6] Incorporate [[http://twitter.github.io/bootstrap/][Twitter Bootstrap]]'s CSS style sheets and JavaScript scripts.
+* [0/4] Incorporate [[http://twitter.github.io/bootstrap/][Twitter Bootstrap]]'s CSS style sheets and JavaScript scripts.
 
   The heart of Twitter Bootstrap is two files: [[https://github.com/twitter/bootstrap/blob/master/docs/assets/css/bootstrap.css][bootstrap.css]] and [[https://github.com/twitter/bootstrap/blob/master/docs/assets/js/bootstrap.js][bootstrap.js]]. We copy
   the minified forms of those files ( bootstrap.min.css and bootstrap.min.js ) to our
   Rails application structure and Rails will detect and incorporate them into the application.
   
-  1. [X] Download the Zipfile from Twitter Bootstap website from your web browser or web client.
-     #+BEGIN_SRC sh
+  1. [ ] Download the Zipfile from Twitter Bootstap website from your web browser or web client.
+     #+BEGIN_SRC sh :tangle bin/fetch-bootstap-zip.sh :shebang #!/bin/sh
+       # ./bin/fetch-bootstap-zip.sh
        wget http://twitter.github.io/bootstrap/assets/bootstrap.zip
      #+END_SRC
-  2. [X] Decompress the bootstrap.zip Zip file
+  2. [ ] Decompress the bootstrap.zip Zip file
      #+BEGIN_SRC sh
        unzip bootstrap.zip
      #+END_SRC
-  3. [X] Copy bootstrap.min.css to app/assets/stylesheets
-     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
-       cp -v bootstrap/css/bootstrap.css ../app/assets/stylesheets
-     #+END_SRC
-  4. [X] Copy bootstrap-repsonsive.min.css to app/assets/stylesheets
-     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
-       cp -v bootstrap/css/bootstrap-responsive.css ../app/assets/stylesheets
-     #+END_SRC
-  5. [X] Copy bootstrap.min.js to app/assets/javascripts
-     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
+  3. [ ] Copy the Bootstrap CSS and Javascript files to our Rails application structure
+     #+BEGIN_SRC sh :tangle bin/copy-bootstrap-to-rails.sh :shebang #!/bin/sh
+       # ./bin/copy-bootstrap-to-rails.sh
+       cp -iv bootstrap/css/bootstrap.min.css ../app/assets/stylesheets
+       cp -iv bootstrap/css/bootstrap-responsive.css ../app/assets/stylesheets
        cp -iv bootstrap/js/bootstrap.min.js ../app/assets/javascripts
+
      #+END_SRC
-  6. [X] Copy two image files
-     #+BEGIN_SRC sh :tangle bin/copy-bootstap-to-rails
-       # ‘bootstrap/img/glyphicons-halflings.png’
-       # ‘bootstrap/img/glyphicons-halflings-white.png’
-       
+  4. [ ] Copy glyphicons-halflings.png and glyphicons-halflings-white.png
+     #+BEGIN_SRC sh :tangle bin/copy-images-to-rails.sh :shebang #!/bin/sh
+       # ./bin/copy-bootstap-to-rails.sh
        mkdir -v ../app/assets/images
-       cp -iv bootstrap/img/* ../app/assets/images/
+       cp -iv bootstrap/img/glyphicons-halflings.png ../app/assets/images/
+       cp -iv bootstrap/img/glyphicons-halflings-white.png ../app/assets/images/
      #+END_SRC
      
   Now that we have [[https://github.com/twitter/bootstrap/blob/master/docs/assets/css/bootstrap.css][bootstrap.css]] and [[https://github.com/twitter/bootstrap/blob/master/docs/assets/js/bootstrap.js][bootstrap.js]] incorporated into our Rails
   application we can proceed to change the default Rails application layout
   the use Bootstap's CSS and Javascript.
   
-* [/] Use Twitter Bootstap's layout in our application instead of the default Rails layout
+* [0/2] Use Twitter Bootstap's layout in our application instead of the default Rails layout
 
-  The default Rails application layout resides in file:../app/views/layouts/. Two embedded
-  ruby statements in the <head> section will pull in the Bootstap bootstrap.min.css and
-  bootstrap.min.js code into the application:
-  #+BEGIN_SRC html
-    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  #+END_SRC
+  1. [ ] Copy starter-template.html.erb to 
+     file:app/views/layouts/starter-template.html.erb
 
-  1. [ ] 
-
-  
-
-  #+BEGIN_SRC html
-    <body>
-    
-    <%= yield %>
-    
-    </body>
-      
-  #+END_SRC
-
-  We will use the body stucture from Twitter Bootsrap's [[http://twitter.github.io/bootstrap/getting-started.html#examples][getting-started.html#examples]] / [[https://github.com/twitter/bootstrap/blob/master/docs/examples/starter-template.html][starter template]] example. The starter example layout may
-  be viewed [[https://github.com/twitter/bootstrap/blob/master/docs/examples/starter-template.html][directly on GitHub]]. The starter example layout uses a fixed width layout, which is
-  introduced at [[http://twitter.github.io/bootstrap/scaffolding.html#layouts][scaffolding.html#layouts]]. 
-
-  #+BEGIN_SRC html
-    <body>
-      
-      <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="brand" href="#">Project name</a>
-            <div class="nav-collapse collapse">
-              <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        
-        <h1>Bootstrap starter template</h1>
-        <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-        
-      </div> <!-- /container -->
-      
-    </body>
-  #+END_SRC
-
-  1. [ ] Replace the <body><% = yield %></body> section with the Bootstrap <body> section in file:../app/views/layouts/application.html.erb
+     #+BEGIN_SRC sh
+       # this command will replace the default rails layout with a Twitter Bootstrap layout
+       cp -v app/views/layouts/starter-template.html.erb ../app/views/layouts/application.html.erb
+     #+END_SRC
      
-     Here's the end result:
+     [[file:app/views/layouts/starter-template.html.erb][starter-template.html.erb]] is Twitter Bootstrap's [[https://github.com/twitter/bootstrap/blob/master/docs/examples/starter-template.html][starter template]] example merged
+     with the default [[file:app/views/layouts/application.html.erb][app/views/layouts/application.html.erb]] file that Rails generates.
      
+     Here's the resulting app/views/layouts/application.html.erb:
      #+BEGIN_SRC html
        <html>
-         <head>
-           <title>Bootstrap</title>
-           <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-           <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-           <%= csrf_meta_tags %>
-           <style>
-             body {
-             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-             }
-           </style>  
-         </head>
+       <head>
+         <title>Bootstrap</title>
+         <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+         <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+         <%= csrf_meta_tags %>
+         <style>
+           body {
+           padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+           }
+         </style>  
+       </head>
        
-         <body>
+           <body>
            
-           <div class="navbar navbar-inverse navbar-fixed-top">
-             <div class="navbar-inner">
-               <div class="container">
-                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                   <span class="icon-bar"></span>
-                 </button>
-                 <a class="brand" href="#">Project name</a>
-                 <div class="nav-collapse collapse">
-                   <ul class="nav">
-                     <li class="active"><a href="#">Home</a></li>
-                     <li><a href="#about">About</a></li>
-                     <li><a href="#contact">Contact</a></li>
-                   </ul>
-                 </div><!--/.nav-collapse -->
+             <div class="navbar navbar-inverse navbar-fixed-top">
+               <div class="navbar-inner">
+                 <div class="container">
+                   <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
+                   </button>
+                   <a class="brand" href="#">Project name</a>
+                   <div class="nav-collapse collapse">
+                     <ul class="nav">
+                       <li class="active"><a href="#">Home</a></li>
+                       <li><a href="#about">About</a></li>
+                       <li><a href="#contact">Contact</a></li>
+                     </ul>
+                   </div><!--/.nav-collapse -->
+                 </div>
                </div>
              </div>
-           </div>
-           <div class="container">
+             <div class="container">
+               
+               <h1>Bootstrap starter template</h1>
+               <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+               <%= yield %>
+               
+             </div> <!-- /container -->
              
-             <h1>Bootstrap starter template</h1>
-             <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-             <%= yield %>
-             
-           </div> <!-- /container -->
-           
-         </body>
+           </body>
        
        
        </body>
        </html>
      #+END_SRC
-  
+
+     The starter example layout uses a fixed width layout, which is
+     introduced at [[http://twitter.github.io/bootstrap/scaffolding.html#layouts][scaffolding.html#layouts]].
+
+  2. [ ] Compare our application at http://localhost:3000 with http://twitter.github.io/bootstrap/examples/starter-template.html.
+     
+     Our newly created Rails application running on port 3000 should have the 
+     
+
