new file:   bin/copy-starter-template.sh

--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -122,14 +122,14 @@
      
   Now that we have [[https://github.com/twitter/bootstrap/blob/master/docs/assets/css/bootstrap.css][bootstrap.css]] and [[https://github.com/twitter/bootstrap/blob/master/docs/assets/js/bootstrap.js][bootstrap.js]] incorporated into our Rails
   application we can proceed to change the default Rails application layout
-  the use Bootstrap's CSS and Javascript.
+  to use Bootstrap's CSS and Javascript.
   
 * [0/2] Use Twitter Bootstrap's layout in our application instead of the default Rails layout
 
-  1. [ ] Copy starter-template.html.erb to 
-     file:app/views/layouts/starter-template.html.erb
+  1. [ ] Overwrite app/views/layouts/application.html.erb with [[file:app/views/layouts/starter-template.html.erb][starter-template.html.erb]] 
 
-     #+BEGIN_SRC sh
+     #+BEGIN_SRC sh :tangle bin/copy-starter-template.sh :shebang #!/bin/sh
+       # ./bin/copy-starter-template.sh
        # this command will replace the default rails layout with a Twitter Bootstrap layout
        cp -v app/views/layouts/starter-template.html.erb ../app/views/layouts/application.html.erb
      #+END_SRC
@@ -188,11 +188,11 @@
        </html>
      #+END_SRC
 
-     The starter example layout uses a fixed width layout, which is
-     introduced at [[http://twitter.github.io/bootstrap/scaffolding.html#layouts][scaffolding.html#layouts]].
+     The starter example layout uses a fixed width layout, which is introduced at [[http://twitter.github.io/bootstrap/scaffolding.html#layouts][scaffolding.html#layouts]].
 
   2. [ ] Compare our application at http://localhost:3000 with http://twitter.github.io/bootstrap/examples/starter-template.html.
      
-     Our newly created Rails application running on port 3000 should have the 
-     
+     Our newly created Rails application running on port 3000 should have essentially the
+     same appearance as the example running on Twitter's github.io site. It it doesn't something
+     went wrong.
 
