--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -124,7 +124,9 @@
   application we can proceed to change the default Rails application layout
   to use Bootstrap's CSS and Javascript.
   
-* [0/2] Use Twitter Bootstrap's layout in our application instead of the default Rails layout
+* [0/2] Use Twitter Bootstrap fixed width layout in our Rails application
+
+  Now that Bootstrap is installed let's proceed to use Bootstrap's CSS in our application.
 
   1. [ ] Overwrite app/views/layouts/application.html.erb with [[file:app/views/layouts/starter-template.html.erb][starter-template.html.erb]] 
 
@@ -189,7 +191,6 @@
      #+END_SRC
 
      The starter example layout uses a fixed width layout, which is introduced at [[http://twitter.github.io/bootstrap/scaffolding.html#layouts][scaffolding.html#layouts]].
-
   2. [ ] Compare our application at http://localhost:3000 with http://twitter.github.io/bootstrap/examples/starter-template.html.
      
      Our newly created Rails application running on port 3000 should have essentially the
