--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -204,4 +204,9 @@
   | [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]]          | 2.3.1.0 |        | 1,210,000 |
   | twitter-bootstrap-rails |         |        | 590,000   |
   |                         |         |        |           |
-** 
+** [/] Setting up Twitter Bootstrap with the [[https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/README.md#bootstrap-for-sass][bootstrap-sass]] Gem
+   1. [ ] Enable bootstrap-sass in [[file:../Gemfile][Gemfile]]
+      #+BEGIN_SRC ruby
+        gem 'bootstrap-sass', '~> 2.3.1.0'
+      #+END_SRC
+   
